# Tradez

./: .gitignore  LICENSE  README.md
dev/:  FindJsonCpp.cmake  CMakeLists.txt  main.cpp
dev/common/: error_interface.hpp
dev/common/api/: drawing_tool.hpp  error_interface.hpp  trading_interface.hpp
dev/common/utilities/include/: container_helper.hpp  crypto_helper.hpp  drawers.hpp  logger.hpp  multipurpose_converter.hpp  trading_client_helper.hpp
dev/common/utilities/source/: crypto_helper.cpp  drawers.cpp  logger.cpp  multipurpose_converter.cpp  trading_client_helper.cpp
dev/external_lib/kraken/: kclient.cpp  ktrade.hpp
dev/external_lib/libbittrex/: client.h
dev/external_lib/libbittrex/response/: balance.h  currency.h  market.h  market_history.h  market_summary.h  open_order.h  order.h  order_history.h
dev/external_lib/tgraphics/: esc_defines.h
dev/trading/analyzer/include/: data_analyzer.hpp  data_grabber.hpp
dev/trading/analyzer/source/: data_analyzer.cpp  data_grabber.cpp
dev/trading/api/: trading_interface.hpp
dev/trading/bot/include/: asset_pair_handler.hpp  orders_handler.hpp  trader.hpp  trading_platform_observer.hpp
dev/trading/bot/source/: asset_pair_handler.cpp  orders_handler.cpp  trader.cpp  trading_platform_observer.cpp
dev/trading_platforms/bittrex/include/: bittrex.hpp
dev/trading_platforms/bittrex/source/: bittrex.cpp
dev/trading_platforms/common/: asset_interface.hpp  client_interface.hpp  trading_event.hpp  trading_platform.hpp
dev/trading_platforms/kraken/include/: kraken.hpp  kraken_client.hpp
dev/trading_platforms/kraken/source/: kraken.cpp  kraken_client.cpp
